crates/plotnik-tests/tests/03-analyze/duplicates/duplicate_capture_bubbled_into_own_node.txt
Q = (foo (a) @x) @x
------------------ DIAGNOSTICS -------------------
error: capture `@x` already defined in this scope
 --> query.ptk:1:18
  |
1 | Q = (foo (a) @x) @x
  |                  ^^
  |
help: rename one capture, or use an enum if they are mutually exclusive branches
-------------------- SYMBOLS ---------------------
Q
